feat(security): synchronize JWT identity and controller authorization